--- a/user_supervisor_studio/stock_detail.html
+++ b/user_supervisor_studio/stock_detail.html
@@ -354,7 +354,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 								<div class="col-12">
 									<div class="row">
-		                                <div class="col-lg-4 col-sm-6">
+		                                <div class="col-md-4 col-sm-12">
 		                                    <div class="kt-portlet kt-portlet--height-fluid">
 		                                    	<div class="kt-widget14">
 		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
@@ -368,7 +368,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                    	</div>
 		                                    </div>
 		                                </div>
-		                                <div class="col-lg-4 col-sm-6">
+		                                <div class="col-md-4 col-sm-12">
 		                                    <div class="kt-portlet kt-portlet--height-fluid">
 		                                    	<div class="kt-widget14">
 		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
@@ -382,7 +382,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                    	</div>
 		                                    </div>
 		                                </div>
-		                                <div class="col-lg-4 col-sm-6">
+		                                <div class="col-md-4 col-sm-12">
 		                                    <div class="kt-portlet kt-portlet--height-fluid">
 		                                    	<div class="kt-widget14">
 		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
@@ -409,27 +409,63 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Stock
+													Detail Stock <span name="stock_nama">Eyelash Extension</span>
 												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<ul class="nav nav-pills" role="tablist">
+													<li class="nav-item">
+														<a class="nav-link active" data-toggle="tab" href="#tab-stock-in" role="tab" aria-selected="true">
+															Stock In
+														</a>
+													</li>
+													<li class="nav-item">
+														<a class="nav-link" data-toggle="tab" href="#tab-stock-out" role="tab" aria-selected="false">
+															Stock Out
+														</a>
+													</li>
+												</ul>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<form class="kt-form kt-form--fit kt-margin-b-5">
-    											<div class="row justify-space-between">
-													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_stock_detail"/>
-														<div class="input-group-append">
-															<span class="input-group-text">
-																<i class="la la-calendar"></i>
-															</span>
+											<div class="tab-content">
+												<div class="tab-pane active" id="tab-stock-in" role="tabpanel">
+													<form class="kt-form kt-form--fit kt-margin-b-5">
+														<div class="row justify-space-between">
+															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_stock_detail_in"/>
+																<div class="input-group-append">
+																	<span class="input-group-text">
+																		<i class="la la-calendar"></i>
+																	</span>
+																</div>
+															</div>
+															<div class="col-lg-4 col-sm-6">
+																<input type="text" class="form-control" placeholder="Search" id="search_stock_detail_in">
+															</div>
 														</div>
-													</div>
-													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control" placeholder="Search" id="search_stock_detail">
-													</div>
-    											</div>
-    										</form>
-                                            <table class="table table-bordered table-hover table-checkable" id="table_stock_detail"></table>
+													</form>
+													<table class="table table-bordered table-hover table-checkable" id="table_stock_detail_in"></table>
+												</div>
+												<div class="tab-pane" id="tab-stock-out" role="tabpanel">
+													<form class="kt-form kt-form--fit kt-margin-b-5">
+														<div class="row justify-space-between">
+															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_stock_detail_out"/>
+																<div class="input-group-append">
+																	<span class="input-group-text">
+																		<i class="la la-calendar"></i>
+																	</span>
+																</div>
+															</div>
+															<div class="col-lg-4 col-sm-6">
+																<input type="text" class="form-control" placeholder="Search" id="search_stock_detail_out">
+															</div>
+														</div>
+													</form>
+													<table class="table table-bordered table-hover table-checkable" id="table_stock_detail_out"></table>
+												</div>
+											</div>
 										</div>
 									</div>
 
