--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -407,44 +407,60 @@ License: You must have a valid license purchased only from themeforest(the above
 										<form id="kt_form_karyawan_tambah">
 	                                        <div class="modal-body">
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Nama:</label>
-                                                    <div class="col-8">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Nama :</label>
+                                                    <div class="col-sm-8">
                                                         <input type="text" class="form-control" name="karyawan_nama" placeholder="Nama">
                                                     </div>
                                                 </div>
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Jabatan:</label>
-                                                    <div class="col-8">
-                                                        <input type="text" class="form-control" name="karyawan_jabatan" placeholder="Jabatan">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Studio :</label>
+                                                    <div class="col-sm-8">
+														<select class="form-control" name="karyawan_studio">
+															<option value="" selected disabled>Studio</option>
+															<option>Studio Cabang Hasanuddin</option>
+															<option>Studio Cabang Hasanuddin</option>
+															<option>Studio Cabang Hasanuddin</option>
+														</select>
                                                     </div>
                                                 </div>
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Alamat:</label>
-                                                    <div class="col-8">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Jabatan :</label>
+                                                    <div class="col-sm-8">
+														<select class="form-control" name="karyawan_jabatan">
+															<option value="" selected disabled>Jabatan</option>
+															<option>Admin</option>
+															<option>Supervisor</option>
+															<option>Therapist</option>
+														</select>
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Alamat :</label>
+                                                    <div class="col-sm-8">
                                                         <input type="text" class="form-control" name="karyawan_alamat" placeholder="Alamat">
                                                     </div>
                                                 </div>
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Email:</label>
-                                                    <div class="col-8">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Email :</label>
+                                                    <div class="col-sm-8">
                                                         <input type="email" class="form-control" name="karyawan_email" placeholder="Email">
                                                     </div>
                                                 </div>
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">No. HP:</label>
-                                                    <div class="col-8">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">No. HP :</label>
+                                                    <div class="col-sm-8">
                                                         <input type="text" class="form-control" name="karyawan_nohp" placeholder="No. HP">
                                                     </div>
                                                 </div>
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Username</label>
-                                                    <div class="col-8">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Username :</label>
+                                                    <div class="col-sm-8">
                                                         <input type="text" class="form-control" name="karyawan_username" placeholder="Username">
                                                     </div>
                                                 </div>
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Password</label>
-                                                    <div class="col-8">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Password :</label>
+                                                    <div class="col-sm-8">
                                                         <input type="password" class="form-control" name="karyawan_password" placeholder="Password">
                                                     </div>
                                                 </div>
@@ -562,6 +578,9 @@ License: You must have a valid license purchased only from themeforest(the above
 	            // define validation rules
 	            rules: {
 					karyawan_nama : {
+						required: true
+					},
+					karyawan_studio : {
 						required: true
 					},
 					karyawan_jabatan : {
