--- a/user_gudang/stock_new.html
+++ b/user_gudang/stock_new.html
@@ -340,8 +340,8 @@ License: You must have a valid license purchased only from themeforest(the above
 			                                                        <th style="width: 5%">No</th>
 			                                                        <th style="width: 22.5%">Nama Barang</th>
 			                                                        <th style="width: 17.5%">Jumlah<br>(Satuan Besar)</th>
-			                                                        <th style="width: 15%">Jumlah<br>(Satuan Sedang)</th>
-			                                                        <th style="width: 15%">Jumlah<br>(Satuan Kecil)</th>
+			                                                        <th style="width: 17.5%">Jumlah<br>(Satuan Sedang)</th>
+			                                                        <th style="width: 17.5%">Jumlah<br>(Satuan Kecil)</th>
 			                                                        <th style="width: 20%">Harga</th>
 			                                                    </tr>
 			                                                </thead>
@@ -462,17 +462,29 @@ License: You must have a valid license purchased only from themeforest(the above
 						<td class="text-center">
 							<div class="form-group kt-margin-b-0">
 								<div class="input-group">
-									<input type="text" class="form-control request_required" name="stock_jumlah_besar`+ i +`" placeholder="Jumlah">
+									<input type="text" class="form-control request_required" name="stock_jumlah_besar`+ i +`" placeholder="Jumlah" value="0">
 									<div class="input-group-append"><span class="input-group-text" name="stock_satuan_besar`+ i +`">Box</span></div>
 								</div>
 								<span class="form-text text-muted kt-hidden"></span>
 							</div>
 						</td>
 						<td class="text-center">
-							<span name="stock_jumlah_sedang`+ i +`">20</span>&nbsp;<span name="stock_satuan_sedang`+ i +`">Pack</span>
+							<div class="form-group kt-margin-b-0">
+								<div class="input-group">
+									<input type="text" class="form-control request_required" name="stock_jumlah_sedang`+ i +`" placeholder="Jumlah" value="0">
+									<div class="input-group-append"><span class="input-group-text" name="stock_satuan_sedang`+ i +`">Pack</span></div>
+								</div>
+								<span class="form-text text-muted kt-hidden"></span>
+							</div>
 						</td>
 						<td class="text-center">
-							<span name="stock_jumlah_kecil`+ i +`">60</span>&nbsp;<span name="stock_satuan_kecil`+ i +`">Pcs</span>
+							<div class="form-group kt-margin-b-0">
+								<div class="input-group">
+									<input type="text" class="form-control request_required" name="stock_jumlah_kecil`+ i +`" placeholder="Jumlah" value="0">
+									<div class="input-group-append"><span class="input-group-text" name="stock_satuan_kecil`+ i +`">Pcs</span></div>
+								</div>
+								<span class="form-text text-muted kt-hidden"></span>
+							</div>
 						</td>
 						<td class="text-center">
 							<input type="number" class="form-control request_required" name="stock_harga`+ i +`" placeholder="Harga">
