--- a/user_therapist/treatment_detail_done.html
+++ b/user_therapist/treatment_detail_done.html
@@ -307,6 +307,32 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="row">
 
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
+									<div class="kt-portlet kt-portlet--mobile">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<h3 class="kt-portlet__head-title">
+													Treatment Status : <span class="kt-portlet__head-title kt-font-success">Done</span>
+												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<ul class="nav nav-pills" role="tablist">
+													<li class="nav-item">
+														<a class="nav-link active" data-toggle="tab" href="#tab-spk" role="tab" aria-selected="true">
+															SPK
+														</a>
+													</li>
+													<li class="nav-item">
+														<a class="nav-link" data-toggle="tab" href="#tab-invoice" role="tab" aria-selected="false">
+															Invoice
+														</a>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 
 									<!--begin::Portlet-->
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
@@ -318,31 +344,61 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<div style="margin-bottom:20px;">
-                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
-												<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
-                                            </div>
-        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
-											<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
-												<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_tambah_treatment"><i class="flaticon-add"></i>Tambah Treatment</button>
-											</div>
-											<div class="row" style="margin-top:50px;">
-												<div class="col-sm-6" style="padding-right:0px;">
-													<table class="col-sm-12" style="bottom: 0px; position: absolute;">
-		                                                <tr>
-		                                                    <th width="35%">Waktu Mulai</th>
-		                                                    <th width="10%">:</th>
-		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
-		                                                </tr>
-		                                                <tr>
-		                                                    <th>Waktu Selesai</th>
-		                                                    <th>:</th>
-		                                                    <th style="font-weight:500;" name="waktu_selesai">10.00 WITA</th>
-		                                                </tr>
-		                                            </table>
+											<div class="tab-content">
+												<div class="tab-pane active" id="tab-spk" role="tabpanel">
+													<div style="margin-bottom:20px;">
+		                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+		                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
+														<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
+		                                            </div>
+		        									<table class="table table-bordered table-hover table-checkable" id="table_spk_done"></table>
+													<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
+														<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_tambah_treatment"><i class="flaticon-add"></i>Tambah Treatment</button>
+													</div>
+													<div class="row" style="margin-top:50px;">
+														<div class="col-sm-6" style="padding-right:0px;">
+															<table class="col-sm-12" style="bottom: 0px; position: absolute;">
+				                                                <tr>
+				                                                    <th width="35%">Waktu Mulai</th>
+				                                                    <th width="10%">:</th>
+				                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+				                                                </tr>
+				                                                <tr>
+				                                                    <th>Waktu Selesai</th>
+				                                                    <th>:</th>
+				                                                    <th style="font-weight:500;" name="waktu_selesai">10.00 WITA</th>
+				                                                </tr>
+				                                            </table>
+														</div>
+		                                            </div>
 												</div>
-                                            </div>
+												<div class="tab-pane" id="tab-invoice" role="tabpanel">
+													<div style="margin-bottom:20px;">
+		                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+		                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
+														<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
+		                                            </div>
+		        									<table class="table table-bordered table-hover table-checkable" id="table_invoice"></table>
+													<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
+													</div>
+													<div class="row" style="margin-top:50px;">
+														<div class="col-sm-6" style="padding-right:0px;">
+															<table class="col-sm-12" style="bottom: 0px; position: absolute;">
+				                                                <tr>
+				                                                    <th width="35%">Waktu Mulai</th>
+				                                                    <th width="10%">:</th>
+				                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+				                                                </tr>
+				                                                <tr>
+				                                                    <th>Waktu Selesai</th>
+				                                                    <th>:</th>
+				                                                    <th style="font-weight:500;" name="waktu_selesai">10.00 WITA</th>
+				                                                </tr>
+				                                            </table>
+														</div>
+		                                            </div>
+												</div>
+											</div>
 										</div>
 									</div>
 
