--- a/user_therapist/treatment_detail_waiting.html
+++ b/user_therapist/treatment_detail_waiting.html
@@ -304,6 +304,27 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
+							<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
+								<div class="kt-portlet kt-portlet--mobile">
+									<div class="kt-portlet__head">
+										<div class="kt-portlet__head-label">
+											<h3 class="kt-portlet__head-title">
+												Treatment Status : <span class="kt-portlet__head-title kt-font-warning">Waiting</span>
+											</h3>
+										</div>
+										<div class="kt-portlet__head-toolbar">
+											<ul class="nav nav-pills" role="tablist">
+												<li class="nav-item">
+													<a class="nav-link active">
+														SPK
+													</a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
 							<div class="row">
 
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
@@ -323,7 +344,6 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
 												<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
                                             </div>
-        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="row" style="margin-top:50px;">
 												<div class="col-sm-6 margin-mobile-b-20" style="padding-right:0px;">
 													<table class="col-sm-12" style="bottom: 0px; position: absolute;">
