All user profile pinjaman tambah diatas total pinjaman dan hr karyawan superadmin total pinjaman di atas

--- a/user_therapist/profile_payroll_pinjaman.html
+++ b/user_therapist/profile_payroll_pinjaman.html
@@ -511,6 +511,13 @@ License: You must have a valid license purchased only from themeforest(the above
 					// location.reload();
 				});
 			});
+
+			// Datatable responsiveness x Bootstrap tab bug
+			$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+		        $($.fn.dataTable.tables(true)).DataTable()
+		           .columns.adjust()
+		           .responsive.recalc();
+		    });
 		</script>
 
 		<!--end::Page Scripts -->
