--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -809,6 +809,13 @@ License: You must have a valid license purchased only from themeforest(the above
 	                //form[0].submit(); // submit the form
 	            }
         	});
+
+			// Datatable responsiveness x Bootstrap tab bug
+			$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+		        $($.fn.dataTable.tables(true)).DataTable()
+		           .columns.adjust()
+		           .responsive.recalc();
+		    });
 		</script>
 
 		<!--end::Page Scripts -->
