Not finished fix on responsiveness portlet toolbar on therapist

--- a/user_therapist/profile_payroll.html
+++ b/user_therapist/profile_payroll.html
@@ -320,7 +320,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<a href="user_therapist/profile_payroll_pinjaman.html"><button type="button" class="btn btn-sm btn-success"><i class="flaticon2-list-3"></i> Pinjaman <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
+												<a href="user_therapist/profile_payroll_pinjaman.html"><button type="button" class="btn btn-md btn-success"><i class="flaticon2-list-3"></i> Pinjaman <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
