--- a/user_therapist/inventory_request.html
+++ b/user_therapist/inventory_request.html
@@ -321,7 +321,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<a href="user_therapist/inventory_request_new.html" class="btn btn-sm btn-success"><i class="flaticon2-graphic-design" style="color: white;"></i> New Request</a>
+												<a href="user_therapist/inventory_request_new.html" class="btn btn-md btn-success"><i class="flaticon2-graphic-design" style="color: white;"></i> New Request</a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
