--- a/user_therapist/profile_kehadiran.html
+++ b/user_therapist/profile_kehadiran.html
@@ -382,8 +382,31 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_request_dayoff"><i class="flaticon2-graphic-design"></i> Request Day-Off</button>
-												<a class="kt-margin-l-5" href="user_therapist/profile_kehadiran_dayoff.html"><button type="button" class="btn btn-sm btn-outline-success"><i class="flaticon2-list-3"></i> List Request Day-Off <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
+												<div class="mobile-show">
+													<div class="dropdown dropdown-inline kt-margin-l-5">
+														<a href="#" data-ktportlet-tool="toggle" class="btn btn-md btn-icon btn-icon-md btn-success" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="la la-angle-down"></i></a>
+														<div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-149px, 33px, 0px);">
+															<ul class="kt-nav" style="padding:0px;">
+																<li class="kt-nav__item">
+																	<a class="kt-nav__link" data-toggle="modal" data-target="#kt_modal_request_dayoff">
+																		<i class="kt-nav__link-icon flaticon2-graphic-design"></i>
+																		<span class="kt-nav__link-text">Request Day-Off</span>
+																	</a>
+																</li>
+																<li class="kt-nav__item">
+																	<a href="user_therapist/profile_kehadiran_dayoff.html" class="kt-nav__link">
+																		<i class="kt-nav__link-icon flaticon2-list-3"></i>
+																		<span class="kt-nav__link-text">List Request Day-Off</span>
+																	</a>
+																</li>
+															</ul>
+														</div>
+													</div>
+												</div>
+												<div class="mobile-hidden">
+													<button type="button" class="btn btn-md btn-success" data-toggle="modal" data-target="#kt_modal_request_dayoff"><i class="flaticon2-graphic-design"></i> Request Day-Off</button>
+													<a class="kt-margin-l-5" href="user_therapist/profile_kehadiran_dayoff.html"><button type="button" class="btn btn-md btn-outline-success"><i class="flaticon2-list-3"></i> List Request Day-Off <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
+												</div>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
