--- a/user_therapist/inventory_request.html
+++ b/user_therapist/inventory_request.html
@@ -321,7 +321,24 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<a href="user_therapist/inventory_request_new.html" class="btn btn-md btn-success"><i class="flaticon2-graphic-design" style="color: white;"></i> New Request</a>
+												<div class="mobile-show">
+													<div class="dropdown dropdown-inline kt-margin-l-5">
+														<a href="#" data-ktportlet-tool="toggle" class="btn btn-md btn-icon btn-icon-md btn-success" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="la la-angle-down"></i></a>
+														<div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-149px, 33px, 0px);">
+															<ul class="kt-nav" style="padding:0px;">
+																<li class="kt-nav__item">
+																	<a href="user_therapist/inventory_request_new.html" class="kt-nav__link">
+																		<i class="kt-nav__link-icon flaticon2-graphic-design"></i>
+																		<span class="kt-nav__link-text">New Request</span>
+																	</a>
+																</li>
+															</ul>
+														</div>
+													</div>
+												</div>
+												<div class="mobile-hidden">
+													<a href="user_therapist/inventory_request_new.html" class="btn btn-md btn-success"><i class="flaticon2-graphic-design" style="color: white;"></i> New Request</a>
+												</div>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
