--- a/user_therapist/treatment_detail_waiting.html
+++ b/user_therapist/treatment_detail_waiting.html
@@ -304,28 +304,45 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-							<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
-								<div class="kt-portlet kt-portlet--mobile">
-									<div class="kt-portlet__head">
-										<div class="kt-portlet__head-label">
-											<h3 class="kt-portlet__head-title">
-												Treatment Status : <span class="kt-portlet__head-title kt-font-warning">Waiting</span>
-											</h3>
-										</div>
-										<div class="kt-portlet__head-toolbar">
-											<ul class="nav nav-pills" role="tablist">
-												<li class="nav-item">
-													<a class="nav-link active">
-														SPK
-													</a>
-												</li>
-											</ul>
+							<div class="row">
+
+								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
+									<div class="kt-portlet kt-portlet--mobile">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<h3 class="kt-portlet__head-title">
+													Treatment Status : <span class="kt-portlet__head-title kt-font-warning">Waiting</span>
+												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<div class="mobile-show">
+													<div class="dropdown dropdown-inline kt-margin-l-5">
+														<a href="#" data-ktportlet-tool="toggle" class="btn btn-md btn-icon btn-icon-md btn-success" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="la la-angle-down"></i></a>
+														<div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-149px, 33px, 0px);">
+															<ul class="kt-nav nav" style="padding:0px;">
+																<li class="kt-nav__item nav-item">
+																	<a class="kt-nav__link nav-link active">
+																		<i class="kt-nav__link-icon flaticon2-file-1"></i>
+																		<span class="kt-nav__link-text">SPK</span>
+																	</a>
+																</li>
+															</ul>
+														</div>
+													</div>
+												</div>
+												<div class="mobile-hidden">
+													<ul class="nav nav-pills">
+														<li class="nav-item">
+															<a class="nav-link active">
+																SPK
+															</a>
+														</li>
+													</ul>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-
-							<div class="row">
 
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 
@@ -344,7 +361,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
 												<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
                                             </div>
-											<div class="row" style="margin-top:50px;">
+											<div class="row" style="margin-top:60px;">
 												<div class="col-sm-6 margin-mobile-b-20" style="padding-right:0px;">
 													<table class="col-sm-12" style="bottom: 0px; position: absolute;">
 		                                                <tr>
