--- a/user_therapist/treatment_detail_paid.html
+++ b/user_therapist/treatment_detail_paid.html
@@ -112,14 +112,14 @@ License: You must have a valid license purchased only from themeforest(the above
 								<h4 class="sidebar-logo">THERAPIST PAGE</h4>
 							</div>
 							<ul class="kt-menu__nav ">
-								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <path d="M2.56066017,10.6819805 L4.68198052,8.56066017 C5.26776695,7.97487373 6.21751442,7.97487373 6.80330086,8.56066017 L8.9246212,10.6819805 C9.51040764,11.267767 9.51040764,12.2175144 8.9246212,12.8033009 L6.80330086,14.9246212 C6.21751442,15.5104076 5.26776695,15.5104076 4.68198052,14.9246212 L2.56066017,12.8033009 C1.97487373,12.2175144 1.97487373,11.267767 2.56066017,10.6819805 Z M14.5606602,10.6819805 L16.6819805,8.56066017 C17.267767,7.97487373 18.2175144,7.97487373 18.8033009,8.56066017 L20.9246212,10.6819805 C21.5104076,11.267767 21.5104076,12.2175144 20.9246212,12.8033009 L18.8033009,14.9246212 C18.2175144,15.5104076 17.267767,15.5104076 16.6819805,14.9246212 L14.5606602,12.8033009 C13.9748737,12.2175144 13.9748737,11.267767 14.5606602,10.6819805 Z" fill="#000000" opacity="0.3"/>
 								        <path d="M8.56066017,16.6819805 L10.6819805,14.5606602 C11.267767,13.9748737 12.2175144,13.9748737 12.8033009,14.5606602 L14.9246212,16.6819805 C15.5104076,17.267767 15.5104076,18.2175144 14.9246212,18.8033009 L12.8033009,20.9246212 C12.2175144,21.5104076 11.267767,21.5104076 10.6819805,20.9246212 L8.56066017,18.8033009 C7.97487373,18.2175144 7.97487373,17.267767 8.56066017,16.6819805 Z M8.56066017,4.68198052 L10.6819805,2.56066017 C11.267767,1.97487373 12.2175144,1.97487373 12.8033009,2.56066017 L14.9246212,4.68198052 C15.5104076,5.26776695 15.5104076,6.21751442 14.9246212,6.80330086 L12.8033009,8.9246212 C12.2175144,9.51040764 11.267767,9.51040764 10.6819805,8.9246212 L8.56066017,6.80330086 C7.97487373,6.21751442 7.97487373,5.26776695 8.56066017,4.68198052 Z" fill="#000000"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Active Treatment</span></a></li>
-								<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/listTreatment.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/listTreatment.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <path d="M8,3 L8,3.5 C8,4.32842712 8.67157288,5 9.5,5 L14.5,5 C15.3284271,5 16,4.32842712 16,3.5 L16,3 L18,3 C19.1045695,3 20,3.8954305 20,5 L20,21 C20,22.1045695 19.1045695,23 18,23 L6,23 C4.8954305,23 4,22.1045695 4,21 L4,5 C4,3.8954305 4.8954305,3 6,3 L8,3 Z" fill="#000000" opacity="0.3"/>
@@ -287,10 +287,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Active Treatment </h3>
+										List Treatment </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_therapist/index.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_therapist/listTreatment.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_therapist/treatment_detail_done.html" class="kt-subheader__breadcrumbs-link">
 											Treatment details </a>
@@ -311,7 +311,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
 												<h3 class="kt-portlet__head-title">
-													Treatment Status : <span class="kt-portlet__head-title kt-font-success">Done</span>
+													Treatment Status : <span class="kt-portlet__head-title kt-font-primary">Paid</span>
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
@@ -375,11 +375,8 @@ License: You must have a valid license purchased only from themeforest(the above
 														<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
 		                                            </div>
 		        									<table class="table table-bordered table-hover table-checkable" id="table_spk_done"></table>
-													<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
-														<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_tambah_treatment"><i class="flaticon-add"></i>Tambah Treatment</button>
-													</div>
 													<div class="row" style="margin-top:60px;">
-														<div class="col-sm-6" style="padding-right:0px;">
+														<div class="col-sm-6 margin-mobile-b-10" style="padding-right:0px;">
 															<table class="col-sm-12" style="bottom: 0px; position: absolute;">
 				                                                <tr>
 				                                                    <th width="35%">Waktu Mulai</th>
@@ -392,6 +389,12 @@ License: You must have a valid license purchased only from themeforest(the above
 				                                                    <th style="font-weight:500;" name="waktu_selesai">10.00 WITA</th>
 				                                                </tr>
 				                                            </table>
+														</div>
+														<div class="col-sm-6 mobile_align_left" style="text-align: right;">
+															<span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
+															<span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
+															<span class="kt-font-bold">Complaint :</span>&nbsp;<br>
+															<span name="complaint_text" style="word-wrap: break-word">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya</span>&nbsp;<br>
 														</div>
 		                                            </div>
 												</div>
